Fix UI jumping up when playback begins

--- a/app/assets/stylesheets/components/_sm2.scss
+++ b/app/assets/stylesheets/components/_sm2.scss
@@ -1,7 +1,13 @@
 #sm2-container {
     height:0;
-    width:0;
+    position: absolute;
     visibility:hidden;
+    width:0;
+}
+
+#sm2movie {
+    height: 0;
+    width: 0;
 }
 
 #sm2-container.swf_timedout {
